@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed handling signals without quality
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.1
 Date: 2024-10-18
